[package]
name = "chip8-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.11.0", features = ["unstable"] }
iced = { version = "0.3.0", features = ["async-std", "canvas"] }
iced_native = "0.4.0"
