[package]
name = "chip8-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-std = { version = "1.11.0", features = ["unstable"] }
chrono = "0.4.19"
clap = { version="3.1.12", features = ["cargo"] }
cpal = "0.13.5"
fern = "0.6.1"
iced = { version = "0.3.0", features = ["async-std", "canvas"] }
iced_native = "0.4.0"
log = "0.4.16"
rand = "0.8.5"

[dev-dependencies]
proptest = "1.0.0"
